# studyLidar

./: .gitignore  README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/lesson1/: lesson1_feature_detection_node  lesson1_laser_scan_node
devel/lib/lesson2/: lesson2_scan_match_icp_node  lesson2_scan_to_pointcloud2_converter_node
devel/lib/lesson3/: lesson3_plicp_odometry_node  lesson3_scan_match_plicp_node
devel/lib/pkgconfig/: lesson1.pc  lesson2.pc  lesson3.pc
devel/share/lesson1/cmake/: lesson1Config.cmake
devel/share/lesson2/cmake/: lesson2Config.cmake
devel/share/lesson3/cmake/: lesson3Config.cmake
src/lesson1/: CMakeLists.txt
src/lesson1/launch/: demo.launch  feature_detection.launch
src/lesson1/src/: feature_detection.cc  laser_scan_node.cc
src/lesson2/: CMakeLists.txt
src/lesson2/include/lesson2/: scan_match_icp.h  scan_to_pointcloud2_converter.h
src/lesson2/launch/: feature_detection.launch  scan_match_icp.launch  scan_to_pointcloud2.launch
src/lesson2/src/: scan_match_icp.cc  scan_to_pointcloud2_converter.cc
src/lesson3/: CMakeLists.txt  package.xml
src/lesson3/include/lesson3/: plicp_odometry.h  scan_match_plicp.h
src/lesson3/launch/: plicp_odometry.launch  scan_match_plicp.launch
src/lesson3/src/: plicp_odometry.cc  scan_match_plicp.cc
src/lesson4/: CMakeLists.txt  package.xml
src/lesson4/include/lesson4/gmapping/: gmapping.h
src/lesson4/launch/: make_gmapping_map.launch  make_occupancy_grid_map.launch
src/lesson4/src/gmapping/: gmapping.cc
src/lesson4/src/occupancy_grid/: occupancy_grid.cc
